# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-01-09 mmichaud <m.michael.michaud@orange.fr>
  * fix a regression introduced in r4720 in PostGISWriter

2016-01-04 mmichaud <m.michael.michaud@orange.fr>
  * With postgis, don't try to convert every text field into geometry !

2016-01-02 ede
  * finetuned wfs httpclient access, unified proxy and auth handling
  * wfs request is now buffered to disk for optimal performance
  * wfs item count is now limited by RAM only
  * NOTE: we should probably switch to deegree3+ instead of patching things up

2015-12-31 ede
  * fix FeatureInfoTool did not respect wms 1.3.0 axis order
  * EditWMSQueryPlugin allows now properly changing of _all_ parameters
    of an existing wms layer

2015-12-29 Nicolas Ribot <nicolas.ribot@gmail.com>
  * WHERE clause tested for SpatialDatabase layers before validating the 
    selection: A popup error with Query and JDBC SQL error is displayed.
    New method for SpatialDatabasesSQLBuilder giving the check query to perform
    (query with where clause and LIMIT 0 trick from Michael)
  * MySQL/MariaDB improvements added @r4687:
    Added support for OGC spatial metadata layout 
    (geometry_columns table listing geometric tables)
    Kept native support if OGC tables not found (extent, srid)
    Changed query to get layer extent, now based on aggregate query on table.
    Changed native geometry binary format detection: 
    MySQL format stores SRID in the first 4 bytes of the blob.
  * SQLite OCG GeoPackage support added @r4701: binary geometry type and 
    metadata tables support.

2015-12-28 ede
  * move dbquery dependency postgis into it's proper subfolder

<----------------------------------------------- Changes.txt updated 'til here
2015-12-28 mmichaud <m.michael.michaud@orange.fr>